# prj001-baby

./: .gitignore  .python-version  MANIFEST.in  Readme.md  dev_requirements.txt  requirements.txt  setup.cfg  setup.py
analytics/001_eda_feeds/: 001_eda_feeds.ipynb
analytics/001_eda_feeds/.ipynb_checkpoints/: 001_eda_feeds-checkpoint.ipynb
analytics/002_eda_changes/: 001_eda_changes.ipynb
baby/pl/00_setup/: 020_create_schemas.sql
baby/pl/10_L0/: 011_LO_FEEDS.sh
src/pl/00_setup/: 010_create_database.sql  020_create_schemas.sql
src/pl/10_L0/: 010_L0_FEEDS.sql  011_LO_FEEDS.sh
src/pl/20_L1/: 010_L1_FEEDS.sql
tests/: README.md
