[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
test_paths = tests
log_level = ERROR
log_cli_level = ERROR
filterwarnings =
    ignore::DeprecationWarning

[flake8]
ignore = C901, E741
max-complexity = 10
max-line-length = 120
exclude =
    .git,
    .venv,
    .tox,
    .pytest_cache,
    .circleci
